--- a/NEWS
+++ b/NEWS
@@ -76,11 +76,14 @@ Ecere SDK 0.42 (May 16, 2008)
    * IDE improvements were made.
    * Numerous bugs were fixed.
 ----------------------------------------
+ (December 5, 2007)
+
+   * Acovel Media Player 0.01
+----------------------------------------
 Ecere SDK 0.41.17.11 (December 2, 2007)
 
    * This release corrects an X performance issue introduced in the last release.
-   * Acovel Media Player 0.01 (December 5, 2007)
-----------------------------------------
+   ----------------------------------------
 Ecere SDK 0.41.17.10 (December 1, 2007)
 
    * Mac OS X is now supported (through X11).
@@ -132,11 +135,16 @@ Ecere SDK 0.41.17.4 (November 9, 2007)
 Ecere SDK 0.41.17 (October 29, 2007)
 
    * Minor feature enhancements and bugfixes.
-   * Ecere Communicator 0.01 (October 21, 2007)
+----------------------------------------
+ (October 21, 2007)
+
+   * Ecere Communicator 0.01
 ----------------------------------------
 Ecere SDK 0.41.16 (August 30, 2007)
 ----------------------------------------
 Ecere SDK 0.40 (September 27, 2006) (v3)
+
+ * All SDK tools are now written in eC
 ---------------------------------------
  ( November 2005 )      
 
