--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ecere (0.44.01-1) experimental; urgency=low
+ecere-sdk (0.44.01-1) experimental; urgency=low
 
   * Initial packaging of Ecere SDK for Debian. (Closes: #665332, LP: #394998)
 
