--- a/NEWS
+++ b/NEWS
@@ -142,9 +142,10 @@ Ecere SDK 0.41.17 (October 29, 2007)
 ----------------------------------------
 Ecere SDK 0.41.16 (August 30, 2007)
 ----------------------------------------
-Ecere SDK 0.40 (September 27, 2006)
+Ecere SDK 0.40 (September 27, 2006) (v3)
 
  * All SDK tools are now written in eC
+ * X11 Interface/Graphics
 ---------------------------------------
  ( November 2005 )      
 
@@ -159,7 +160,7 @@ Ecere SDK 0.40 (September 27, 2006)
 
  * Ecere Corporation 
 ---------------------------------------
- ( 2004 - 2005 ) (v3)
+ ( 2004 - 2005 )
    * eC Language & Compiler
 
    * Modern Ecere IDE
